5-Application of multi-cloud, multi-cluster service mesh/hipster-apps/hip1-gke/01-hip1-services-local.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommendationservice
spec:
  ports:
  - name: grpc
    port: 8080
    targetPort: 8080
  selector:
    app: recommendationservice
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: frontend
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: productcatalogservice
spec:
  ports:
  - name: grpc
    port: 3550
    targetPort: 3550
  selector:
    app: productcatalogservice
  type: ClusterIP
---
#apiVersion: v1
#kind: Service
#metadata:
#  name: cartservice
#spec:
#  ports:
#  - name: grpc
#    port: 7070
#    targetPort: 7070
#  selector:
#    app: cartservice
#  type: ClusterIP
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: redis-cart
#spec:
#  type: ClusterIP
#  selector:
#    app: redis-cart
#  ports:
#  - name: redis
#    port: 6379
#    targetPort: 6379
